--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<h2>3 random images</h2>
+<nav>
+	<ul>
+		<a href="#"><img src="https://picsum.photos/id/123/200/300" alt="Random image"></a>
+		<a href="#"><img src="https://picsum.photos/id/124/200/300" alt="Random image"></a>
+		<a href="#"><img src="https://picsum.photos/id/125/200/300" alt="Random image"></a>
+	
+	</ul>
+</nav>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
